--- a/html/contacts.html
+++ b/html/contacts.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/contact.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Dealership</title>
 </head>
 
@@ -55,6 +56,7 @@
         </div>
     </footer>
     <script src="../javaScript/contact.js"></script>
+    <script src="/javaScript/newFunc.js"></script>
 </body>
 
 </html>
