fix links,add new  info button

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -13,13 +13,13 @@
 
 <body>
     <header>
-        <a href="/index.html"><img src="/resource/sports-car.svg" alt="sports-car" id="logo"></a>
+        <a href="/index.html"><img src="../resource/sports-car.svg" alt="sports-car" id="logo"></a>
         <span id="dName">MD Dealership</span>
         <nav>
-            <a href="/index.html">HOME</a>
-            <a href="/html/about.html">ABOUT</a>
-            <a href="/html/contacts.html">CONTACT</a>
-            <a href="/html/cars.html">CARS</a>
+            <a href="../index.html">HOME</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./contacts.html">CONTACT</a>
+            <a href="./cars.html">CARS</a>
         </nav>
     </header>
     <section>
@@ -43,12 +43,12 @@
                 In us you trust.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/"><img src="/resource/facebook.svg" alt="Facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="/resource/instagram.svg" alt="Instagram icon"></a>
+                <li><a href="https://www.facebook.com/"><img src="../resource/facebook.svg" alt="Facebook icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="../resource/instagram.svg" alt="Instagram icon"></a>
                 </li>
-                <li><a href="https://twitter.com/"><img src="/resource/twitter.svg" alt="Twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/"><img src="/resource/linkedin.svg" alt="LinkedIn icon"></a></li>
-                <li><a href="https://www.google.com/"><img src="/resource/google.svg" alt="Google icon"></a></li>
+                <li><a href="https://twitter.com/"><img src="../resource/twitter.svg" alt="Twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/"><img src="../resource/linkedin.svg" alt="LinkedIn icon"></a></li>
+                <li><a href="https://www.google.com/"><img src="../resource/google.svg" alt="Google icon"></a></li>
             </ul>
         </div>
         <div class="footer-botom">
@@ -56,7 +56,7 @@
         </div>
     </footer>
     <script src="../javaScript/contact.js"></script>
-    <script src="/javaScript/newFunc.js"></script>
+    <script src="../javaScript/newFunc.js"></script>
 </body>
 
 </html>
