--- a/html/about.html
+++ b/html/about.html
@@ -13,19 +13,25 @@
 
 <body>
     <header>
-        <a href="/index.html"><img src="/resource/sports-car.svg" alt="sports-car" id="logo"></a>
+        <a href="/index.html"><img src="../resource/sports-car.svg" alt="sports-car" id="logo"></a>
         <span id="dName">MD Dealership</span>
         <nav>
-            <a href="/index.html">HOME</a>
-            <a href="/html/about.html">ABOUT</a>
-            <a href="/html/contacts.html">CONTACT</a>
-            <a href="/html/cars.html">CARS</a>
+            <a href="../index.html">HOME</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./contacts.html">CONTACT</a>
+            <a href="./cars.html">CARS</a>
         </nav>
     </header>
     <section>
         <h3 id="aboutUs">
-
         </h3>
+    </section>
+    <section class="moreInfo">
+        <h3 class="title">More Info</h3>
+        <div class="content">
+            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, numquam placeat. Sapiente minima accusantium labore possimus dicta voluptates, molestias voluptatem.</h3>
+        </div>
+
     </section>
     <footer>
         <div class="footer-content">
@@ -34,12 +40,12 @@
                 In us you trust.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/"><img src="/resource/facebook.svg" alt="Facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="/resource/instagram.svg" alt="Instagram icon"></a>
+                <li><a href="https://www.facebook.com/"><img src="../resource/facebook.svg" alt="Facebook icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="../resource/instagram.svg" alt="Instagram icon"></a>
                 </li>
-                <li><a href="https://twitter.com/"><img src="/resource/twitter.svg" alt="Twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/"><img src="/resource/linkedin.svg" alt="LinkedIn icon"></a></li>
-                <li><a href="https://www.google.com/"><img src="/resource/google.svg" alt="Google icon"></a></li>
+                <li><a href="https://twitter.com/"><img src="../resource/twitter.svg" alt="Twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/"><img src="../resource/linkedin.svg" alt="LinkedIn icon"></a></li>
+                <li><a href="https://www.google.com/"><img src="../resource/google.svg" alt="Google icon"></a></li>
             </ul>
         </div>
         <div class="footer-botom">
@@ -47,7 +53,7 @@
         </div>
     </footer>
     <script src="../javaScript/about.js"></script>
-    <script src="/javaScript/newFunc.js"></script>
+    <script src="../javaScript/newFunc.js"></script>
 </body>
 
 </html>
