--- a/html/cars.html
+++ b/html/cars.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/cars.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/cars.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Dealership</title>
 </head>
 
 <body>
     <header>
-        <a href="/index.html"><img src="/resource/sports-car.svg" alt="sports-car" id="logo"></a>
+        <a href="/index.html"><img src="../resource/sports-car.svg" alt="sports-car" id="logo"></a>
         <span id="dName">MD Dealership</span>
         <nav>
-            <a href="/index.html">HOME</a>
-            <a href="/html/about.html">ABOUT</a>
-            <a href="/html/contacts.html">CONTACT</a>
-            <a href="/html/cars.html">CARS</a>
+            <a href="../index.html">HOME</a>
+            <a href="./about.html">ABOUT</a>
+            <a href="./contacts.html">CONTACT</a>
+            <a href="./cars.html">CARS</a>
         </nav>
     </header>
     <section>
@@ -35,7 +35,7 @@
                     <span class="specs">Petrol</span>
                     <span class="specs">183mph</span>
                 </p>
-                <a href="../html/contacts.html" class="btn">Test Drive</a>
+                <a href="./contacts.html" class="btn">Test Drive</a>
             </div>
         </article>
         <article class="vehicles">
@@ -50,7 +50,7 @@
                     <span class="specs">Petrol</span>
                     <span class="specs">183mph</span>
                 </p>
-                <a href="../html/contacts.html" class="btn">Test Drive</a>
+                <a href="./contacts.html" class="btn">Test Drive</a>
             </div>
         </article>
         <article class="vehicles">
@@ -65,7 +65,7 @@
                     <span class="specs">Petrol</span>
                     <span class="specs">183mph</span>
                 </p>
-                <a href="../html/contacts.html" class="btn">Test Drive</a>
+                <a href="./contacts.html" class="btn">Test Drive</a>
             </div>
         </article>
         <article class="vehicles">
@@ -80,7 +80,7 @@
                     <span class="specs">Petrol</span>
                     <span class="specs">183mph</span>
                 </p>
-                <a href="../html/contacts.html" class="btn">Test Drive</a>
+                <a href="./contacts.html" class="btn">Test Drive</a>
             </div>
         </article>
         <article class="vehicles">
@@ -95,7 +95,7 @@
                     <span class="specs">Petrol</span>
                     <span class="specs">183mph</span>
                 </p>
-                <a href="../html/contacts.html" class="btn">Test Drive</a>
+                <a href="./contacts.html" class="btn">Test Drive</a>
             </div>
         </article>
     </section>
@@ -108,12 +108,12 @@
                 In us you trust.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/"><img src="/resource/facebook.svg" alt="Facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="/resource/instagram.svg" alt="Instagram icon"></a>
+                <li><a href="https://www.facebook.com/"><img src="../resource/facebook.svg" alt="Facebook icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="../resource/instagram.svg" alt="Instagram icon"></a>
                 </li>
-                <li><a href="https://twitter.com/"><img src="/resource/twitter.svg" alt="Twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/"><img src="/resource/linkedin.svg" alt="LinkedIn icon"></a></li>
-                <li><a href="https://www.google.com/"><img src="/resource/google.svg" alt="Google icon"></a></li>
+                <li><a href="https://twitter.com/"><img src="../resource/twitter.svg" alt="Twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/"><img src="../resource/linkedin.svg" alt="LinkedIn icon"></a></li>
+                <li><a href="https://www.google.com/"><img src="../resource/google.svg" alt="Google icon"></a></li>
             </ul>
         </div>
         <div class="footer-botom">
@@ -121,7 +121,7 @@
         </div>
     </footer>
     <script src="../javaScript/cars.js"></script>
-    <script src="/javaScript/newFunc.js"></script>
+    <script src="../javaScript/newFunc.js"></script>
 </body>
 
 </html>
