--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <header>
-        <a href="/index.html"><img src="/resource/sports-car.svg" alt="sports-car" id="logo"></a>
+        <a href="/index.html"><img src="./resource/sports-car.svg" alt="sports-car" id="logo"></a>
         <span id="dName">MD Dealership</span>
         <nav>
             <a href="/index.html">HOME</a>
-            <a href="/html/about.html">ABOUT</a>
-            <a href="/html/contacts.html">CONTACT</a>
+            <a href="./html/about.html">ABOUT</a>
+            <a href="./html/contacts.html">CONTACT</a>
             <div class="wrapper">
-                <a href="/html/cars.html" class="main">VEHICLES</a>
+                <a href="./html/cars.html" class="main">VEHICLES</a>
                 <div class="dropD">
                 <a href="">MOTORCYCLES</a>
                 <a href="">CARS</a>
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <section class="zooming">
-        <img src="/resource/homePagePhoto.jpg" alt="GTR photo">
+        <img src="./resource/homePagePhoto.jpg" alt="GTR photo">
     </section>
     <section class="new-delivery">
         <div>
@@ -61,20 +61,20 @@
                 In us you trust.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/"><img src="/resource/facebook.svg" alt="Facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/"><img src="/resource/instagram.svg" alt="Instagram icon"></a>
+                <li><a href="https://www.facebook.com/"><img src="./resource/facebook.svg" alt="Facebook icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img src="./resource/instagram.svg" alt="Instagram icon"></a>
                 </li>
-                <li><a href="https://twitter.com/"><img src="/resource/twitter.svg" alt="Twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/"><img src="/resource/linkedin.svg" alt="LinkedIn icon"></a></li>
-                <li><a href="https://www.google.com/"><img src="/resource/google.svg" alt="Google icon"></a></li>
+                <li><a href="https://twitter.com/"><img src="./resource/twitter.svg" alt="Twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/"><img src="./resource/linkedin.svg" alt="LinkedIn icon"></a></li>
+                <li><a href="https://www.google.com/"><img src="./resource/google.svg" alt="Google icon"></a></li>
             </ul>
         </div>
         <div class="footer-botom">
             <p>copyright &copy;2015 MD Dealership. Designed by <span>Martin Daskalov</span></p>
         </div>
     </footer>
-    <script src="/javaScript/app.js"></script>
-    <script src="/javaScript/newFunc.js"></script>
+    <script src="./javaScript/app.js"></script>
+    <script src="./javaScript/newFunc.js"></script>
 </body>
 
 </html>
