fix more info btn, fix nav, add hover info in cars.html

--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,13 @@
             <a href="../index.html">HOME</a>
             <a href="./about.html">ABOUT</a>
             <a href="./contacts.html">CONTACT</a>
-            <a href="./cars.html">CARS</a>
+            <div class="wrapper">
+                <a href="" class="main">VEHICLES</a>
+                <div class="dropD">
+                    <a href="">MOTORCYCLES</a>
+                    <a href="./cars.html">CARS</a>
+                </div>
+            </div>
         </nav>
     </header>
     <section>
@@ -28,10 +34,8 @@
     </section>
     <section class="moreInfo">
         <h3 class="title">More Info</h3>
-        <div class="content">
-            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, numquam placeat. Sapiente minima accusantium labore possimus dicta voluptates, molestias voluptatem.</h3>
-        </div>
-
+        <h3 class="content">MD Dealership has an award-winning brand, leadership team, and the best and brightest
+            employees in the industry.</h3>
     </section>
     <footer>
         <div class="footer-content">
@@ -40,11 +44,13 @@
                 In us you trust.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/"><img src="../resource/facebook.svg" alt="Facebook icon"></a></li>
+                <li><a href="https://www.facebook.com/"><img src="../resource/facebook.svg" alt="Facebook icon"></a>
+                </li>
                 <li><a href="https://www.instagram.com/"><img src="../resource/instagram.svg" alt="Instagram icon"></a>
                 </li>
                 <li><a href="https://twitter.com/"><img src="../resource/twitter.svg" alt="Twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/"><img src="../resource/linkedin.svg" alt="LinkedIn icon"></a></li>
+                <li><a href="https://www.linkedin.com/"><img src="../resource/linkedin.svg" alt="LinkedIn icon"></a>
+                </li>
                 <li><a href="https://www.google.com/"><img src="../resource/google.svg" alt="Google icon"></a></li>
             </ul>
         </div>
@@ -53,7 +59,7 @@
         </div>
     </footer>
     <script src="../javaScript/about.js"></script>
-    <script src="../javaScript/newFunc.js"></script>
+    <script src="../javaScript/nav.js"></script>
 </body>
 
 </html>
