--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,7 +19,13 @@
             <a href="../index.html">HOME</a>
             <a href="./about.html">ABOUT</a>
             <a href="./contacts.html">CONTACT</a>
-            <a href="./cars.html">CARS</a>
+            <div class="wrapper">
+                <a href="" class="main">VEHICLES</a>
+                <div class="dropD">
+                <a href="">MOTORCYCLES</a>
+                <a href="./cars.html">CARS</a>
+            </div>
+            </div>
         </nav>
     </header>
     <section>
@@ -56,7 +62,7 @@
         </div>
     </footer>
     <script src="../javaScript/contact.js"></script>
-    <script src="../javaScript/newFunc.js"></script>
+    <script src="../javaScript/nav.js"></script>
 </body>
 
 </html>
