--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <a href="./html/about.html">ABOUT</a>
             <a href="./html/contacts.html">CONTACT</a>
             <div class="wrapper">
-                <a href="./html/cars.html" class="main">VEHICLES</a>
+                <a href="" class="main">VEHICLES</a>
                 <div class="dropD">
-                <a href="">MOTORCYCLES</a>
-                <a href="">CARS</a>
-            </div>
+                    <a href="">MOTORCYCLES</a>
+                    <a href="./html/cars.html">CARS</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -32,10 +32,10 @@
     </section>
     <section class="new-delivery">
         <div>
-                <h2>New Delivery soon!</h2>
-                <div class="countdown">
-                    <div class="container-day">
-                        <h3 class="day">Time</h3>
+            <h2>New Delivery soon!</h2>
+            <div class="countdown">
+                <div class="container-day">
+                    <h3 class="day">Time</h3>
                     <h3>Day</h3>
                 </div>
                 <div class="container-hour">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <img name="slider" alt="Cars" id="gtr">
+        <img name="slider" alt="Cars" id="carSlider">
     </section>
     <footer>
         <div class="footer-content">
@@ -74,7 +74,7 @@
         </div>
     </footer>
     <script src="./javaScript/app.js"></script>
-    <script src="./javaScript/newFunc.js"></script>
+    <script src="./javaScript/nav.js"></script>
 </body>
 
 </html>
