--- a/html/cars.html
+++ b/html/cars.html
@@ -19,12 +19,18 @@
             <a href="../index.html">HOME</a>
             <a href="./about.html">ABOUT</a>
             <a href="./contacts.html">CONTACT</a>
-            <a href="./cars.html">CARS</a>
+            <div class="wrapper">
+                <a href="" class="main">VEHICLES</a>
+                <div class="dropD">
+                <a href="">MOTORCYCLES</a>
+                <a href="./cars.html">CARS</a>
+            </div>
+            </div>
         </nav>
     </header>
     <section>
         <article class="vehicles">
-            <img src="../resource/Mercedes Maybach S600.png" alt="mazda 6" class="stock">
+            <img src="../resource/Mercedes Maybach S600.png" alt="mazda 6" class="stock" data-car="mercedes">
             <div class="content">
                 <h3>New model</h3>
                 <div class="price"> <span>price:</span> &euro;150000</div>
@@ -39,7 +45,7 @@
             </div>
         </article>
         <article class="vehicles">
-            <img src="../resource/Audi s4.png" alt="" class="stock">
+            <img src="../resource/Audi s4.png" alt="" class="stock" data-car="audi">
             <div class="content">
                 <h3>New model</h3>
                 <div class="price"> <span>price:</span> &euro;150000</div>
@@ -54,7 +60,7 @@
             </div>
         </article>
         <article class="vehicles">
-            <img src="../resource/Volkswagen golf.png" alt="" class="stock">
+            <img src="../resource/Volkswagen golf.png" alt="" class="stock" data-car="vw">
             <div class="content">
                 <h3>New model</h3>
                 <div class="price"> <span>price:</span> &euro;150000</div>
@@ -69,7 +75,7 @@
             </div>
         </article>
         <article class="vehicles">
-            <img src="../resource/Tesla Model X.png" alt="" class="stock">
+            <img src="../resource/Tesla Model X.png" alt="" class="stock" data-car="tesla">
             <div class="content">
                 <h3>New model</h3>
                 <div class="price"> <span>price:</span> &euro;150000</div>
@@ -84,7 +90,7 @@
             </div>
         </article>
         <article class="vehicles">
-            <img src="../resource/Mazda 6.png" alt="" class="stock">
+            <img src="../resource/Mazda 6.png" alt="" class="stock" data-car="mazda">
             <div class="content">
                 <h3>New model</h3>
                 <div class="price"> <span>price:</span> &euro;150000</div>
@@ -121,7 +127,7 @@
         </div>
     </footer>
     <script src="../javaScript/cars.js"></script>
-    <script src="../javaScript/newFunc.js"></script>
+    <script src="../javaScript/nav.js"></script>
 </body>
 
 </html>
