--- a/html/cars.html
+++ b/html/cars.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="/index.html"><img src="../resource/sports-car.svg" alt="sports-car" id="logo"></a>
+        <a href="../index.html"><img src="../resource/sports-car.svg" alt="sports-car" id="logo"></a>
         <span id="dName">MD Dealership</span>
         <nav>
             <a href="../index.html">HOME</a>
